--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.14.1",
     "jwt-simple": "^0.5.1",
     "mongoose": "^4.8.3",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1"
   }
 }
